--- a/home.html
+++ b/home.html
@@ -9,9 +9,9 @@
     <h1>Cheki's Portfolio</h1>
     <h2>I'm a Web Designer/Developer</h2> 
     <hr>
-    <a href="/public/food.html.html"><img src="food.png" alt="" width="500"></a> <br>
-    <a href="/public/birthday.html.html"><img src="./birthday.png" alt="" width="400"></a> <br>
-    <a href="/public/about.html">About me</a> <br>
-    <a href="/public/contact.html">Contact me</a>
+    <a href="./public/food.html.html"><img src="food.png" alt="" width="500"></a> <br>
+    <a href="./public/birthday.html.html"><img src="./birthday.png" alt="" width="400"></a> <br>
+    <a href="./public/about.html">About me</a> <br>
+    <a href="./public/contact.html">Contact me</a>
 </body>
 </html>
