--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
   nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
   neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p> <br>
-  <a href="../public/about.html">home</a> <br>
+  <a href="../assrts/home.html">home</a> <br>
   <a href="../public/contact.html">contack</a> <br>
   <a href="../public/food.html">food</a> <br>
   <a href="../public/birthday.html">birthday</a> <br>
